# cleannest-analytics

./: .gitignore  Makefile  README.md  dashboard.py  pyproject.toml
.streamlit/: config.toml
cleannest/: database.py  dftools.py  ingestion.py  models.py  palettes.py  plotting.py
cleannest/components/: OrderForm.py
cleannest/db/: expenses.db  main.db
pages/: database.py  expenses.py  order_form.py  orders.py  overview.py  retention.py  revenue.py
pages/overview/: clients.py  pricing.py  receipts.py  summary.py
