[project]
name = "analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "marimo>=0.15.3",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "polars>=1.32.3",
    "reflex>=0.8.7",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.48.1",
    "vegafusion[embed]>=2.0.2",
    "vl-convert-python>=1.6.0",
]
